should plot on both mac and windows now, and added demo to plot ecog

--- a/mayavi_test_entire.ipynb
+++ b/mayavi_test_entire.ipynb
@@ -4,10 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
-    "#%matplotlib inline\n",
-    "#%pylab inline"
+    "%matplotlib inline\n",
+    "%pylab inline"
    ]
   },
   {
@@ -60122,7 +60130,7 @@
        "    "
       ],
       "text/plain": [
-       "<mayavi.modules.surface.Surface at 0x130fd3b8>"
+       "<mayavi.modules.surface.Surface at 0x13976360>"
       ]
      },
      "execution_count": 2,
@@ -60132,9 +60140,7 @@
    ],
    "source": [
     "import os\n",
-    "import PySide\n",
-    "\n",
-    "os.environ['QT_API'] = 'pyside'\n",
+    "os.environ['QT_API'] = 'pyqt'\n",
     "os.environ['ETS_TOOLKIT'] = 'qt4'\n",
     "\n",
     "from mayavi import mlab\n",
