--- a/seizure_predict_playground.ipynb
+++ b/seizure_predict_playground.ipynb
@@ -7,7 +7,26 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib inline\n",
+    "%pylab inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import scipy as scipy\n",
+    "import mne\n",
+    "\n",
+    "print(__doc__)"
+   ]
   }
  ],
  "metadata": {
