move data directory under master folder

--- a/seizure_predict_playground.ipynb
+++ b/seizure_predict_playground.ipynb
@@ -2,14 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "%pylab inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import scipy as scipy\n",
+    "import mne\n",
+    "import environment_info"
    ]
   },
   {
@@ -19,14 +38,73 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\David\\\\Research\\\\seizure_prediction\\\\seizurePrediction_data'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import scipy as scipy\n",
-    "import mne\n",
-    "\n",
-    "print(__doc__)"
+    "environment_info.data_dir"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\David\\\\Research\\\\seizure_prediction'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "environment_info.script_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "script_dir = os.path.dirname(\n",
+    "data_dir = os.path.join(script_dir,'seizurePrediction_data')\n",
+    "#scripts = os.path.join(\n",
+    "\n",
+    "                        \n",
+    "\n",
+    "#data_dir = 'C:\\\\Users\\\\djcald.CSENETID\\\\SharedCode\\\\seizurePrediction_data'\n",
+    "#scripts = 'C:\\\\Users\\\\djcald.CSENETID\\\\SharedCode\\\\seizurePrediction\\\\scripts'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
