modified the patient info to include certain seizure electrodes, now both individual and multiple subject prediction with SVM and logistic regresion

--- a/visualization_mne_demos/mayavi_test_entire.ipynb
+++ b/visualization_mne_demos/mayavi_test_entire.ipynb
@@ -60123,7 +60123,7 @@
        "    "
       ],
       "text/plain": [
-       "<mayavi.modules.surface.Surface at 0x1ef871a59e8>"
+       "<mayavi.modules.surface.Surface at 0x200f2ba6a98>"
       ]
      },
      "execution_count": 2,
@@ -60169,7 +60169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
