cross validation, roc curve, plot plv function, permutation testing

--- a/seizure_predict_ind_subj.ipynb
+++ b/seizure_predict_ind_subj.ipynb
@@ -740,15 +740,8 @@
    "outputs": [],
    "source": [
     "labels_data = list(f['data'].keys())\n",
-    "signal_mat = np.array([f['data'][interest][:] for interest in labels_data])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "signal_mat = np.array([f['data'][interest][:] for interest in labels_data])\n",
+    "\n",
     "plt.figure(dpi=600)\n",
     "trial = 1\n",
     "channel = 60\n",
